--- a/.github/workflows/DeployMobileController.yml
+++ b/.github/workflows/DeployMobileController.yml
@@ -32,6 +32,11 @@ jobs:
         if: steps.changed-files.outputs.any_changed == 'true'
         uses: actions/setup-node@v4
 
+      - name: Install Dependencies
+        if: steps.changed-files.outputs.any_changed == 'true'
+        run: npm ci
+        working-directory: ./mobileAppWebsite/polar-plotter-mobile-controller/
+
       - name: Build Package
         if: steps.changed-files.outputs.any_changed == 'true'
         run: npm run build
