--- a/.github/workflows/DeployMobileController.yml
+++ b/.github/workflows/DeployMobileController.yml
@@ -55,3 +55,4 @@ jobs:
           invalidation: /index.html
           folder: 'mobileAppWebsite/polar-plotter-mobile-controller/dist'
           delete-removed: true
+          private: true
